Improvements in Bluesky Methods